# talentscout

./: README.md  pyproject.toml
app/: streamlit_app.py
src/talentscout/: crew.py  main.py
src/talentscout/config/: agents.yaml  tasks.yaml
